test(bridge,cats,pure): wire the embedded runtime into the smoke specs
The bridge, cats and pure modules each carry an EmbeddedSmokeSpec gated
on assume(isEmbeddedAvailable), but none of those modules ever received
riftJavaEmbeddedTestDeps. isEmbeddedAvailable was therefore false on
every JDK, not just in CI as their scaladoc claimed: the specs were dead
code from the day they were written, and the live coverage they were
supposed to give the blocking connector, the Resource + tagless wiring
and the Either-shaped surface never ran anywhere.

Add the recipe zioBdd and conformance already use, as one shared
embeddedSmokeSettings value — the jars, the fork, and the JVM flag only
work as a set, and three copies would drift.

Guard the specs with a fail-closed check rather than a bare assume: on a
job that declares RIFT_G3_REQUIRE=embedded, an unavailable engine is now
a red build. A permanent green skip is exactly how these specs stayed
dead unnoticed, and issue #63 already established this rule for the G3
lanes.

Closes #99